[Changes for 0.992 - Apr  5, 2009]
  - Support for non-fallback repositories.

[Changes for 0.991 - Mar 10, 2009]
  - Promote previous release to stable release.

[Changes for 0.989_01 - Mar  2, 2009]
* Bug fixes, etc.
  - Track the locations of all archives that have been extracted to
    $ENV{PAR_TEMP}/inc in this run.

[Changes for 0.988 - Mar  1, 2009]
  - Promote previous release to stable release.

[Changes for 0.987_01 - Feb 20, 2009]
* New features
  - Better cleanup of the $TMPDIR/par-$USER/temp-$$ directories
    that are typically used as caches in the "use PAR 'foo.par'" use case.

* Bug fixes, etc.
  - Very slightly more careful handling of PAR-specific environment
    variables.
  - Cleanup of PAR::SetupTemp

[Changes for 0.986 - Feb 19, 2009]
  - Promote to stable release.

[Changes for 0.985_01 - Feb  2, 2009]
* New features
  - Support for the brand new static dependency resolution
    of PAR::Repository::Client 0.23.

* Bug fixes, etc.
  - Fix issue with running scripts from repositories:
    The INC hooks used to be set up too late for this to
    automatically pick up dependencies.

[Changes for 0.984 - Jan 25, 2009]
* New features
  - Implemented the auto-upgrading option for loading and installing
    from PAR::Repositories.

* Bug fixes, etc.
  - Fix issue with PAR::Repository::Client development versions.

[Changes for 0.983 - Sep 12, 2008]
* Dependencies
  - Require AutoLoader 5.67 which contains a PAR-related
    bug-fix.
  - Require PAR::Dist 0.32.

* Internal changes
  - The full extraction process _extract_inc
    (which is triggered when a non--clean pp packaged
    executable is run) can now be forced to do the
    extraction (instead of doing if !-d).
  - That same extraction routine now accepts Archive::Zip
    handles or file names.
  - When, during the full extraction, the extracted paths
    are to be added to @INC, we now make sure they're not
    in @INC yet.

[Changes for 0.982 - Aug 10, 2008]
* New features