@@ -78,13 +78,30 @@ sub _bootstrap {
     my $file = $cache_key = "auto/$modpname/$modfname.$dlext";
 
     if ($FullCache{$file}) {
+        # TODO: understand
         local $DynaLoader::do_expand = 1;
         return $bootstrap->(@args);
     }
 
     my $member;
-    $member = PAR::_find_par_any(undef, $file, 1) if defined &PAR::_find_par_any;
-    return $bootstrap->(@args) unless $member; # we failed to find the dll, let DynaLoader (try or) throw an error
+    # First, try to find things in the peferentially loaded PARs:
+    $member = _find_par_internals([@PAR_INC], undef, $file, 1) if defined &PAR::_find_par_internals;
+
+    # If that failed to find the dll, let DynaLoader (try or) throw an error
+    unless ($member) { 
+        my $filename = eval { $bootstrap->(@args) };
+        return $filename if not $@ and defined $filename;
+    }
+
+    # Now try the fallback pars
+    $member = _find_par_internals([@PAR_INC_LAST], undef, $file, 1) if defined &PAR::_find_par_internals;
+
+    # If that fails, let dynaloader have another go JUST to throw an error
+    # While this may seem wasteful, nothing really matters once we fail to
+    # load shared libraries!
+    unless ($member) { 
+        return $bootstrap->(@args);
+    }
 
     $FullCache{$file} = _dl_extract($member, $file);
 
